issue #209: timezone option for provconvert